src/styles/layout/_common.scss
.lock {
    overflow: hidden;
}

.container {
    width: 80vw;
    margin: auto;

    @include media ("<tablet") {
        margin-inline: auto;
        width: 90vw;
    }
}

.section-label {
    font-family: "adobe-caslon-pro", serif;
    font-weight: 400;
    font-style: italic;
    display: inline-block;
    color: $red;
    @include adaptive-value("font-size", 22, 18, 1);
    @include adaptive-value("margin-bottom", 20, 12, 1);
}

.subhead {
    @include adaptive-value("font-size", 22, 18, 1);
    font-weight: 600;
    letter-spacing: 1px;
    text-transform: uppercase;
    font-family: United Sans Cond;
    width: 85vw;
    margin: 0 auto;
}

.hero {
    position: relative;
    height: 100dvh;
    padding: 100px 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    overflow: hidden;
    background-color: #151515;

    @include media ("<desktop") {
        height: 600px;
    }

    &.low-height {
        height: 60vh;
    }

    .image-grid {
        display: grid;
        grid-template-columns: 1fr 1.5fr 2fr;
        column-gap: 10vw;
        height: -moz-fit-content;
        height: fit-content;
        left: 50%;
        max-height: 100dvh;
        overflow: hidden;
        position: absolute;
        top: 50%;
        transform: translate(-50%, -50%);
        width: 100%;
        z-index: 10;

        @include media ("<desktop") {
            column-gap: 20vw;
            grid-template-columns: 1fr 1fr;
            padding-top: 0;
        }
    }

    .image-column {
        display: flex;
        align-items: center;
        flex-direction: column;
        height: 100%;
        width: 100%;
    }

    .image-column-1 {
        margin-left: -5vw;
        padding-bottom: 7.5vw;
        padding-top: 7vw;

        @include media ("<desktop") {
            align-items: flex-start !important;
            grid-column: 1 / 3;
            margin-left: 7.5vw;
            padding-bottom: 5vw;
            padding-top: 12vw;
        }
    }

    .image-column-2 {
        padding-top: 5vw;
        row-gap: 10vw;

        @include media ("<desktop") {
            padding-top: 10vw;
            row-gap: 15vw;
        }
    }

    .image-column-3 {
        padding-right: 3.75vw;
        row-gap: 10vw;

        @include media ("<desktop") {
            margin-top: -21vw;
            padding-top: 5vw;
        }
    }

    .image-grid-wrap {
        max-width: 20vw;

        @include media ("<desktop") {
            max-width: 32.5vw;
        }
    }

    &::before {
        content: '';
        position: absolute;
        inset: 0;
        width: 100%;
        height: 100%;
        background: #15151599;
        z-index: 15;
    }

    &_bg {
        position: absolute;
        inset: 0;
        width: 100%;
        height: 100%;
        z-index: 13;

        img {
            width: 100%;
            height: 100%;
            object-fit: cover;
        }
    }

    &_content {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        text-align: center;
        height: 100%;
        width: 100%;
        position: relative;
        z-index: 30;
    }

    &_text {
        width: 75%;
        margin: 0 auto;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        text-align: center;
        flex: 1 1 0%;

        h1 {
            font-size: var(--step-hero);
            color: $white;
            letter-spacing: 3px;
            @include adaptive-value("margin-bottom", 20, 12, 1);

            @include media ("<tablet") {
                letter-spacing: 2px;
            }
        }

        p {
            color: $white;
            @include adaptive-value("font-size", 22, 18, 1);
            line-height: calc(30 / 22);
            font-style: italic;
        }
    }
}

.content-components {
    position: relative;

    .content {
        margin-top: var(--space-75p);
        display: grid;
        grid-template-columns: 25vw 1fr;
        gap: var(--space-10p);

        @include media ("<tablet") {
            grid-template-columns: 1fr;
            margin-top: var(--space-15p);
        }
    }

    .image_left {
        @include media ("<tablet") {
            display: none;
        }
    }

    .crop_logo {
        position: absolute;
        aspect-ratio: 1 / 1;
        top: calc(var(--space-footer-logo-width) * -1);
        right: 10vw;
        width: var(--space-footer-logo-width);
        transform: translateY(20%);

        @include media ("<tablet") {
            right: 50%;
            top: calc(var(--space-15p) * -1);
            transform: translate(50%, 20%);
        }
    }
}
/* ... */

